[gd_scene load_steps=4 format=3 uid="uid://k5grnx8v2qnt"]

[ext_resource type="Script" uid="uid://cvko0s3jdxe14" path="res://scripts/windows/title.gd" id="1_60jin"]
[ext_resource type="PackedScene" uid="uid://bfj0lx0yj4638" path="res://scenes/fragments/progress.tscn" id="2_s12f7"]
[ext_resource type="PackedScene" uid="uid://clp3ctkvawra" path="res://scenes/fragments/rating.tscn" id="3_lhka1"]

[node name="TitlePage" type="Node2D"]
script = ExtResource("1_60jin")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.501961)

[node name="Border" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 1052.0
offset_bottom = 598.0
color = Color(1, 0.619608, 0.427451, 1)

[node name="Window" type="ColorRect" parent="."]
offset_left = 110.0
offset_top = 60.0
offset_right = 1042.0
offset_bottom = 588.0
mouse_filter = 2

[node name="Error" type="Label" parent="Window"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = -2.0
offset_right = 624.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0.756863, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "тайтл с таким именем в выбранном разделе уже существует"
horizontal_alignment = 1

[node name="Name" type="TextEdit" parent="Window"]
clip_contents = false
layout_mode = 0
offset_left = 186.0
offset_top = 31.0
offset_right = 449.0
offset_bottom = 62.0
autowrap_mode = 1
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Window/Name"]
layout_mode = 0
offset_left = -166.0
offset_right = -8.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Название:"
horizontal_alignment = 2

[node name="Section" type="OptionButton" parent="Window"]
layout_mode = 0
offset_left = 589.0
offset_top = 31.0
offset_right = 852.0
offset_bottom = 62.0
text_overrun_behavior = 3

[node name="Label" type="Label" parent="Window/Section"]
layout_mode = 0
offset_left = -166.0
offset_right = -8.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Раздел:"
horizontal_alignment = 2

[node name="Status" type="OptionButton" parent="Window"]
layout_mode = 0
offset_left = 186.0
offset_top = 98.0
offset_right = 449.0
offset_bottom = 129.0
selected = 0
item_count = 5
popup/item_0/text = "Не начато"
popup/item_0/id = 0
popup/item_1/text = "В процессе"
popup/item_1/id = 1
popup/item_2/text = "Ожидается продолжение"
popup/item_2/id = 2
popup/item_3/text = "Не понравилось"
popup/item_3/id = 3
popup/item_4/text = "Завершено"
popup/item_4/id = 4

[node name="Label" type="Label" parent="Window/Status"]
layout_mode = 0
offset_left = -166.0
offset_right = -8.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Статус:"
horizontal_alignment = 2

[node name="Progress" parent="Window" instance=ExtResource("2_s12f7")]
visible = false
position = Vector2(575, 98)

[node name="Rating" parent="Window" instance=ExtResource("3_lhka1")]
visible = false
layout_mode = 0
offset_left = 534.0
offset_top = 138.0
offset_right = 1054.0
offset_bottom = 258.0
scale = Vector2(0.6, 0.6)

[node name="Label" type="Label" parent="Window"]
layout_mode = 0
offset_left = 20.0
offset_top = 179.0
offset_right = 229.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Заметка о тайтле:"

[node name="Note" type="TextEdit" parent="Window"]
layout_mode = 0
offset_left = 20.0
offset_top = 215.0
offset_right = 912.0
offset_bottom = 463.0
wrap_mode = 1

[node name="Delete" type="Button" parent="Window"]
visible = false
layout_mode = 0
offset_left = 60.0
offset_top = 478.0
offset_right = 370.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 24
text = "Удалить тайтл"

[node name="Apply" type="Button" parent="Window"]
layout_mode = 0
offset_left = 562.0
offset_top = 478.0
offset_right = 872.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 24
text = "Сохранить тайтл"

[node name="Close" type="Button" parent="."]
offset_left = 999.0
offset_top = 52.0
offset_right = 1049.0
offset_bottom = 94.0
tooltip_text = "Отменить изменения"
theme_override_constants/outline_size = 14
theme_override_font_sizes/font_size = 24
text = "X"

[connection signal="text_changed" from="Window/Name" to="." method="_on_name_text_changed"]
[connection signal="text_set" from="Window/Name" to="." method="_on_name_text_set"]
[connection signal="item_selected" from="Window/Section" to="." method="_on_section_item_selected"]
[connection signal="item_selected" from="Window/Status" to="." method="_on_status_item_selected"]
[connection signal="button_down" from="Window/Delete" to="." method="_on_delete_button_down"]
[connection signal="button_down" from="Window/Apply" to="." method="_on_apply_button_down"]
[connection signal="button_down" from="Close" to="." method="_on_close_button_down"]
